fixed alignment issues in css

--- a/css/main.css
+++ b/css/main.css
@@ -112,8 +112,8 @@ textarea {
 
    h2{
     font-family: 'Poppins', sans-serif;
-    font-size: 500;
-    font-weight: 1.875em;
+    font-weight: 500;
+    font-size: 1.875em;
    }
 
    h3, 
@@ -417,7 +417,7 @@ margin: 30px 0;
 }
 
 .faq-content h4{
-  font-size: 1.333;
+  line-height: 1.333;
 }
 
 
@@ -525,8 +525,8 @@ margin: 30px 0;
   }
 
   h3 {
-      font-size: 1.5em;
-      line-height: 1.25;
+    font-size: 1.5em;
+    line-height: 1.25;
   }
 
   /*Header*/
@@ -658,10 +658,10 @@ footer .copyright {
   ========================================================================== */
 
 .mission-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px;
 }
 .mission-content p {
   width: 45%;
@@ -676,9 +676,9 @@ footer .copyright {
 }
 
 .contact-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
 }
 
 .contact-content h4 {
